--- a/css/style.css
+++ b/css/style.css
@@ -27,18 +27,18 @@ h1, h2, h3 {
   display: none; }
 
 path[class^="side"] {
-  -ms-transition: fill 2s ease-in-out ;
-  -webkit-transition: fill 2s ease-in-out ;
-  -moz-transition: fill 2s ease-in-out ;
-  -o-transition: fill 2s ease-in-out ;
-  transition: fill 2s ease-in-out ; }
+  -ms-transition: fill 1s ease-in-out ;
+  -webkit-transition: fill 1s ease-in-out ;
+  -moz-transition: fill 1s ease-in-out ;
+  -o-transition: fill 1s ease-in-out ;
+  transition: fill 1s ease-in-out ; }
 
 .active {
-  -ms-transition: fill 0.1s ease-in-out !important;
-  -webkit-transition: fill 0.1s ease-in-out !important;
-  -moz-transition: fill 0.1s ease-in-out !important;
-  -o-transition: fill 0.1s ease-in-out !important;
-  transition: fill 0.1s ease-in-out !important; }
+  -ms-transition: fill 0s ease-in-out !important;
+  -webkit-transition: fill 0s ease-in-out !important;
+  -moz-transition: fill 0s ease-in-out !important;
+  -o-transition: fill 0s ease-in-out !important;
+  transition: fill 0s ease-in-out !important; }
 
 .accelerometer .active {
   -ms-transition: fill 0s ease-in-out !important;
@@ -67,16 +67,16 @@ path[class^="side"] {
 
 .mask {
   fill: black;
-  -ms-transition: fill 25s ease-in-out ;
-  -webkit-transition: fill 25s ease-in-out ;
-  -moz-transition: fill 25s ease-in-out ;
-  -o-transition: fill 25s ease-in-out ;
-  transition: fill 25s ease-in-out ;
-  -webkit-transition-delay: 5s;
-  -moz-transition-delay: 5s;
-  -o-transition-delay: 5s;
-  -ms-transition-delay: 5s;
-  transition-delay: 5s; }
+  -ms-transition: fill 40s ease-in-out ;
+  -webkit-transition: fill 40s ease-in-out ;
+  -moz-transition: fill 40s ease-in-out ;
+  -o-transition: fill 40s ease-in-out ;
+  transition: fill 40s ease-in-out ;
+  -webkit-transition-delay: 8s;
+  -moz-transition-delay: 8s;
+  -o-transition-delay: 8s;
+  -ms-transition-delay: 8s;
+  transition-delay: 8s; }
 
 .accelerometer .mask {
   fill: black;
@@ -105,7 +105,7 @@ path[class^="side"] {
   width: 100%;
   height: 600px;
   overflow: visible;
-  background: url("../img/Courtyard-Color2.jpg") no-repeat center center;
+  background: url("../img/Courtyard-Color2.jpg") no-repeat top center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -150,15 +150,19 @@ path[class^="side"] {
 .hexImages {
   position: absolute;
   width: 100%;
-  overflow: hidden; }
+  overflow: visible; }
   .hexImages img {
     display: block;
     margin: auto;
     position: relative; }
-    .hexImages img:nth-child(1) {
-      margin-top: 100px; }
     .hexImages img:nth-child(2) {
       margin-top: -100px; }
+    .hexImages img:nth-child(3) {
+      -o-transform: translate(0, -80px);
+      -ms-transform: translate(0, -80px);
+      -webkit-transform: translate(0, -80px);
+      -moz-transform: translate(0, -80px);
+      transform: translate(0, -80px); }
 
 .hexText h3 {
   font-size: 3.5em;
@@ -167,12 +171,13 @@ path[class^="side"] {
 
 .seperator {
   background: url("../img/border.png") repeat-y center 0;
-  height: 250px;
+  height: 150px;
   position: relative;
-  margin: 80px auto 50px auto; }
+  margin: 50px auto 30px auto; }
 
 .bottom {
-  margin-top: -200px; }
+  margin-top: -300px;
+  height: 100px; }
 
 .subscribe {
   margin: 0 auto;
@@ -201,32 +206,6 @@ input[type=text] {
   margin: 20px auto;
   font-size: 1.2em;
   padding: 0 10px; }
-
-input[type=checkbox] {
-  display: none; }
-
-input[type=checkbox].css-checkbox + label.css-label {
-  padding-left: 17px;
-  height: 12px;
-  display: inline-block;
-  line-height: 12px;
-  margin-top: 15px;
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  vertical-align: middle;
-  cursor: pointer; }
-
-input[type=checkbox].css-checkbox:checked + label.css-label {
-  background-position: 0 -12px; }
-
-label.css-label {
-  background-image: url(http://csscheckbox.com/checkboxes/u/csscheckbox_593adae689b6e344cda220b0a046cec5.png);
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
 
 input[type=submit] {
   display: block;
@@ -280,21 +259,21 @@ input[type=submit] {
         float: right; }
       .hexText div.outer:nth-child(2) {
         background: url("../img/hex_connect.png") center center no-repeat;
-        -o-transform: translate(0, -254px);
-        -ms-transform: translate(0, -254px);
-        -webkit-transform: translate(0, -254px);
-        -moz-transform: translate(0, -254px);
-        transform: translate(0, -254px);
+        -o-transform: translate(0, -224px);
+        -ms-transform: translate(0, -224px);
+        -webkit-transform: translate(0, -224px);
+        -moz-transform: translate(0, -224px);
+        transform: translate(0, -224px);
         /*top: -254px;*/
         margin-left: 65%;
         clear: both; }
       .hexText div.outer:nth-child(3) {
         background: url("../img/hex_learn.png") center center no-repeat;
-        -o-transform: translate(0, -300px);
-        -ms-transform: translate(0, -300px);
-        -webkit-transform: translate(0, -300px);
-        -moz-transform: translate(0, -300px);
-        transform: translate(0, -300px);
+        -o-transform: translate(0, -195px);
+        -ms-transform: translate(0, -195px);
+        -webkit-transform: translate(0, -195px);
+        -moz-transform: translate(0, -195px);
+        transform: translate(0, -195px);
         margin-left: 65%;
         clear: both; }
       .hexText div.outer:nth-child(4) {
@@ -302,44 +281,79 @@ input[type=submit] {
         float: right;
         margin-right: 50%;
         clear: both;
-        -o-transform: translate(0, -150px);
-        -ms-transform: translate(0, -150px);
-        -webkit-transform: translate(0, -150px);
-        -moz-transform: translate(0, -150px);
-        transform: translate(0, -150px); } }
+        -o-transform: translate(0, -120px);
+        -ms-transform: translate(0, -120px);
+        -webkit-transform: translate(0, -120px);
+        -moz-transform: translate(0, -120px);
+        transform: translate(0, -120px); } }
 @media (min-width: 768px) and (max-width: 992px) {
-  .intro .introSide h2 {
-    font-size: 3.5em; }
+  .intro {
+    background-position: center center !important; }
+    .intro .introSide h2 {
+      font-size: 3.5em; }
 
   .location a {
     margin: 0 0 0 100px; }
 
   .hexImages img:nth-child(1) {
     margin-top: 230px; }
+  .hexImages img:nth-child(2) {
+    padding-left: 18px; }
   .hexImages img:nth-child(3) {
-    margin-top: 300px;
-    padding-left: 50px; }
+    -o-transform: translate(0, 348px);
+    -ms-transform: translate(0, 348px);
+    -webkit-transform: translate(0, 348px);
+    -moz-transform: translate(0, 348px);
+    transform: translate(0, 348px); }
 
   .hexText div.outer:nth-child(1) {
     margin-right: 50%;
     margin-top: -100px; }
   .hexText div.outer:nth-child(2) {
     margin-left: 50%;
-    -o-transform: translate(0, 200px);
-    -ms-transform: translate(0, 200px);
-    -webkit-transform: translate(0, 200px);
-    -moz-transform: translate(0, 200px);
-    transform: translate(0, 200px); }
+    -o-transform: translate(0, 280px);
+    -ms-transform: translate(0, 280px);
+    -webkit-transform: translate(0, 280px);
+    -moz-transform: translate(0, 280px);
+    transform: translate(0, 280px); }
   .hexText div.outer:nth-child(3) {
-    -o-transform: translate(0, 140px);
-    -ms-transform: translate(0, 140px);
-    -webkit-transform: translate(0, 140px);
-    -moz-transform: translate(0, 140px);
-    transform: translate(0, 140px);
+    -o-transform: translate(0, 300px);
+    -ms-transform: translate(0, 300px);
+    -webkit-transform: translate(0, 300px);
+    -moz-transform: translate(0, 300px);
+    transform: translate(0, 300px);
     margin-left: 50%; }
+  .hexText div.outer:nth-child(4) {
+    -o-transform: translate(0, -40px);
+    -ms-transform: translate(0, -40px);
+    -webkit-transform: translate(0, -40px);
+    -moz-transform: translate(0, -40px);
+    transform: translate(0, -40px); }
+
+  .accelerometer .hexText div.outer:nth-child(2) {
+    -o-transform: translate(0, 222px);
+    -ms-transform: translate(0, 222px);
+    -webkit-transform: translate(0, 222px);
+    -moz-transform: translate(0, 222px);
+    transform: translate(0, 222px); }
+  .accelerometer .hexText div.outer:nth-child(3) {
+    -o-transform: translate(0, 230px);
+    -ms-transform: translate(0, 230px);
+    -webkit-transform: translate(0, 230px);
+    -moz-transform: translate(0, 230px);
+    transform: translate(0, 230px); }
+  .accelerometer .hexText div.outer:nth-child(4) {
+    -o-transform: translate(0, -208px);
+    -ms-transform: translate(0, -208px);
+    -webkit-transform: translate(0, -208px);
+    -moz-transform: translate(0, -208px);
+    transform: translate(0, -208px); }
 
   .bottom {
-    margin-top: 120px; } }
+    margin-top: 220px; }
+
+  .seperator {
+    margin-bottom: 80px; } }
 @media (max-width: 767px) and (orientation: landscape) {
   .intro .introSide {
     max-width: 35%; } }
