--- a/css/style.scss
+++ b/css/style.scss
@@ -62,12 +62,12 @@ h1, h2, h3 {
 }
 path[class^="side"]
 {
-	@include transition(fill, 2s);
+	@include transition(fill, 1s);
 }
 
 
 .active {
-	@include transition(fill, 0.1s, '!important');
+	@include transition(fill, 0s, '!important');
 }
 .accelerometer .active {
 	@include transition(fill, 0s, '!important');
@@ -98,8 +98,8 @@ path[class^="side"]
 
 .mask {
 	fill:black;
-	@include transition(fill, 25s);
-	@include transitionDelay(5s);
+	@include transition(fill, 40s);
+	@include transitionDelay(8s);
 }
 
 .accelerometer .mask {
@@ -125,7 +125,7 @@ path[class^="side"]
 	height: 600px;
 	overflow: visible;
 	
-	background: url("../img/Courtyard-Color2.jpg") no-repeat center center; 
+	background: url("../img/Courtyard-Color2.jpg") no-repeat top center; 
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -182,16 +182,18 @@ path[class^="side"]
 .hexImages{
 	position: absolute;
 	width: 100%;
-	overflow: hidden;
+	overflow: visible;
+
 	img{
 		display: block;
 		margin: auto;
 		position: relative;
-		&:nth-child(1) {
-			margin-top:100px;
-		}
+		
 		&:nth-child(2) {
 			margin-top:-100px;
+		}
+		&:nth-child(3) {
+			@include translate(0, -80px);
 		}
 	}
 }
@@ -203,12 +205,13 @@ path[class^="side"]
 
 .seperator {
 	background: url("../img/border.png")  repeat-y center 0;
-	height: 250px;
+	height: 150px;
 	position: relative;
-	margin: 80px auto 50px auto;
+	margin: 50px auto 30px auto;
 }
 .bottom {
-	margin-top: -200px
+	margin-top: -300px;
+	height:100px;
 }
 .subscribe {
 	margin: 0 auto;
@@ -242,36 +245,7 @@ input[type=text] {
 	font-size: 1.2em;
 	padding: 0 10px;
 }
-input[type=checkbox] {
-	display:none;
-}
 
-input[type=checkbox].css-checkbox + label.css-label {
-	padding-left:17px;
-	height:12px; 
-	display:inline-block;
-	line-height:12px;
-	margin-top:15px;
-	background-repeat:no-repeat;
-	background-position: 0 0;
-	
-	vertical-align:middle;
-	cursor:pointer;
-
-}
-
-input[type=checkbox].css-checkbox:checked + label.css-label {
-	background-position: 0 -12px;
-}
-label.css-label {
-	background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_593adae689b6e344cda220b0a046cec5.png);
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
 input[type=submit]
 {
     display: block;
@@ -339,14 +313,14 @@ input[type=submit]
 			}
 			&:nth-child(2) {
 				background: url('../img/hex_connect.png') center center no-repeat;
-				@include translate(0, -254px);
+				@include translate(0, -224px);
 				/*top: -254px;*/
 				margin-left: 65%;
 				clear: both;
 			}
 			&:nth-child(3) {
 				background: url('../img/hex_learn.png') center center no-repeat;
-				@include translate(0, -300px);
+				@include translate(0, -195px);
 				margin-left:65%;
 				clear: both;
 			}
@@ -355,14 +329,18 @@ input[type=submit]
 				float: right;
 				margin-right: 50%;
 				clear: both;
-				@include translate(0, -150px);
+				@include translate(0, -120px);
 			}
 		}
 	}
 }
 @media (min-width: 768px) and (max-width: 992px) {
-	.intro .introSide h2 {
-    	font-size: 3.5em;
+	.intro {
+		background-position: center center !important;
+
+		.introSide h2 {
+    		font-size: 3.5em;
+    	}
   	}
   	.location a {
   		margin: 0 0 0 100px;
@@ -372,12 +350,16 @@ input[type=submit]
 			&:nth-child(1) {
 				margin-top:230px;
 			}
+			&:nth-child(2) {
+				padding-left: 18px;
+			}
 			&:nth-child(3) {
-				margin-top: 300px;
-				padding-left: 50px;
+				
+				@include translate(0, 348px);
 			}
 		}
 	}
+
 	.hexText div.outer{
 		&:nth-child(1) {
 			margin-right: 50%;
@@ -385,16 +367,36 @@ input[type=submit]
 		}
 		&:nth-child(2) {
 			margin-left:50%;
-			@include translate(0, 200px);
+			@include translate(0, 280px);
 		}
 		&:nth-child(3) {
-			@include translate(0, 140px);
+			@include translate(0, 300px);
 			margin-left: 50%;
+		}
+		&:nth-child(4) {
+			@include translate(0, -40px);
+		}
+		
+	}
+	.accelerometer .hexText div.outer{
+		
+		&:nth-child(2) {
+			
+			@include translate(0, 222px);
+		}
+		&:nth-child(3) {
+			@include translate(0, 230px);
+		}
+		&:nth-child(4) {
+			@include translate(0, -208px);
 		}
 		
 	}
 	.bottom {
-		margin-top:120px;
+		margin-top:220px;
+	}
+	.seperator {
+		margin-bottom: 80px;
 	}
 }
 @media (max-width: 767px) and (orientation : landscape) {
